Finished jQuery Streetfighter Project

--- a/css/main.css
+++ b/css/main.css
@@ -11,11 +11,11 @@ body {
 .ryu {
 	float: left;
 }
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing, .ryu-cool {
 	width: 659px;
 	height: 494px;
 }
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing, .ryu-cool {
 	display: none;
 }
 .ryu-ready {
@@ -26,6 +26,9 @@ body {
 }
 .ryu-throwing {
 	background-image: url("../images/ryu-throwing-hadouken.png");
+}
+.ryu-cool {
+	background-image: url("../images/ryu-cool.gif");
 }
 .hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
 	background-repeat: no-repeat;
@@ -39,4 +42,19 @@ body {
 	top: 167px;
 	left: -190px;
 	float: left;
+}
+.instructions {
+	margin-left: 600px;
+	width: 300px;
+	height: 300px;
+	position: absolute;
+}
+.inst-one, .inst-two {
+	position: relative;
+	margin-top: 100px;
+	font-size: 32px;
+	font-family: Garamond;
+	font-weight: bold;
+	font-style: italic;
+	color: red;
 }
